--- a/django1/core/templates/produto.html
+++ b/django1/core/templates/produto.html
@@ -1,4 +1,4 @@
-{% load static %}
+aqAK{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,7 @@
 <body>
     <h1>Produto</h1>
 
-    <table>
+    <table>'
         <thead>
             <tr>
                 <th>Produto</th>
