--- a/django2/core/templates/index.html
+++ b/django2/core/templates/index.html
@@ -1,11 +1,43 @@
+{% load bootstrap4 %}
+{% load crispy_forms_tags %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    {% bootstrap_css %}
 </head>
 <body>
-    <h1>Index</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <h1 class="mt-2">Produtos</h1>
+                <hr class="mt-0 mb-4">
+            </div>
+        </div>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Produto</th>
+                    <th scope="col">Preço</th>
+                    <th scope="col">Estoque</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produto in produtos %}
+                    <tr>
+                        <td scope="row">{{ produto.id }}</td>
+                        <td scope="row">{{ produto.nome }}</td>
+                        <td scope="row">{{ produto.preco }}</td>
+                        <td scope="row">{{ produto.estoque }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
+{% bootstrap_javascript jquery='full' %}
 </body>
 </html>
