--- a/django2/core/static/css/styles.css
+++ b/django2/core/static/css/styles.css
@@ -1,4 +1,8 @@
+body {
+    background-color: #341223;
+    color: #ffffff;
+}
 a {
     text-decoration: none;
-    color: #000;
+    color: #ffffff;
 }
