--- a/django2/core/templates/index.html
+++ b/django2/core/templates/index.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load bootstrap4 %}
-{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -8,15 +7,12 @@
     <meta charset="UTF-8">
     <title>Index</title>
     {% bootstrap_css %}
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-8">
-                <h1 class="mt-2">Produtos</h1>
-                <hr class="mt-0 mb-4">
-            </div>
-        </div>
+        <h1>Produtos</h1>
+
         <table class="table table-dark">
             <thead>
                 <tr>
@@ -30,10 +26,24 @@
                 {% for produto in produtos %}
                     <tr>
                         <td scope="row">{{ produto.id }}</td>
-                        <td scope="row">{{ produto.nome }}</td>
+                        <td scope="row"><a href="#modal{{produto.id}}" data-toggle="modal">{{ produto.nome }}</a></td>
                         <td scope="row">{{ produto.preco }}</td>
                         <td scope="row">{{ produto.estoque }}</td>
                     </tr>
+                    <div class="modal fade bd-example-modal-lg show" id="modal{{produto.id}}" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body" id="dynamic-content">
+                                    <img src="{{ produto.image.url }}" class="img-fluid" alt="{{ produto.nome }}" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {% endfor %}
             </tbody>
         </table>
