Implmentando com acesso ao banco de dados

--- a/django2/core/templates/indexcrispy.html
+++ b/django2/core/templates/indexcrispy.html
@@ -10,7 +10,7 @@
 
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>s
+</head>
 <body>
     <div class="container">
         <div class="row justify-content-center">
