--- a/django2/core/templates/produto.html
+++ b/django2/core/templates/produto.html
@@ -40,6 +40,7 @@
 
                         {% buttons %}
                             <button type="submit" class="btn btn-success">Cadastrar</button>
+                            <a class="btn btn-success" href="{% url 'indexcrispy' %}">Voltar</a>
                         {% endbuttons %}
                     </form>
                 {% endblock %}
