Atualizacao fusion com os arquivos html separados

--- a/fusion/core/templates/hero.html
+++ b/fusion/core/templates/hero.html
@@ -10,7 +10,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem repellendus quasi fuga nesciunt dolorum nulla magnam veniam sapiente, fugiat! fuga nesciunt dolorum nulla magnam veniam sapiente, fugiat!</p>
                 <div class="header-button">
                   <a href="#" class="btn btn-common">Download Now</i></a>
-                  <a href="#" class="btn btn-border video-popup">Learn More</i></a>
+                  <a href="#" class="btn btn-border video-popup">Entenda melhor</i></a>
                 </div>
               </div>
             </div>
@@ -27,12 +27,4 @@
     </header>
     <!-- Header Area wrapper End -->
 
-    <!-- Services Section Start -->
-    <section id="services" class="section-padding">
-      <div class="container">
-        <div class="section-header text-center">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Services</h2>
-          <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-        </div>
-        <div class="row">
       <!-- Hero Area End -->
